# food_chatbot

./: .gitignore  README.md  pyproject.toml
src/: docker-compose.yml
src/chat/: chat.py  engine.py
src/embed/: embed.py  weaviate_client.py
src/rasa_app/: Dockerfile  config.yml  domain.yml
src/rasa_app/.config/rasa/: global.yml
src/rasa_app/.rasa/cache/: cache.db
src/rasa_app/.rasa/cache/tmp7ono2b4m/: vocabularies.pkl
src/rasa_app/.rasa/cache/tmp80_af2e5/: synonyms.json
src/rasa_app/.rasa/cache/tmp87no42yb/: memorized_turns.json
src/rasa_app/.rasa/cache/tmph4_ddfj6/: DIETClassifier.data_example.pkl  DIETClassifier.entity_tag_specs.json  DIETClassifier.index_label_id_mapping.json  DIETClassifier.label_data.pkl  DIETClassifier.sparse_feature_sizes.pkl  DIETClassifier.tf_model.index
src/rasa_app/.rasa/cache/tmpmw_5rrg6/: featurizer.json  ted_policy.data_example.pkl  ted_policy.fake_features.pkl  ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
src/rasa_app/.rasa/cache/tmpt7fk7nia/: vocabularies.pkl
src/rasa_app/.rasa/cache/tmpuk3dk97l/: featurizer.json  unexpected_intent_policy.data_example.pkl  unexpected_intent_policy.fake_features.pkl  unexpected_intent_policy.label_quantiles.pkl  unexpected_intent_policy.tf_model.data-00000-of-00001  unexpected_intent_policy.tf_model.index
src/rasa_app/actions/: actions.py
src/rasa_app/data/: nlu.yml  stories.yml
